# papertrail

./: .flake8  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  bridge.py  devel.cmd  devel.py  docker-compose.yml  generator.py  git.py  ocr.py  papertrail.config.ini  papertrail.py  pyproject.toml  r.py  requirements.txt  setup.cfg
.github/workflows/: docker-publish.yml
Format.cmake/: CMakeLists.txt
ci/: azure-pipelines.yml  container_test.py  run.py  run.sh
cmake/: EmbeddedResource.h  LexYacc.cpp  LexYaccConfig.cmake  embedresource.cpp  external.cmake  quick.cmake  vcpkg.cmake
container/: ContainerFile
cpp/: CRAFT.cpp  CRAFT.h  CRNN.cpp  CRNN.h  ParallelWorker.h  Scanner.cpp  Scanner.h  TorchModel.cpp  TorchModel.h  cli.pidl  scanner.cpp  torch.cmake
scripts/archive/: mybuild-a64-windows.cmake  mybuild-arm-windows.cmake  vcpkg.triplets.bak
scripts/archive/ports/gattlib/: portfile.cmake
scripts/archive/ports/stencil/: use_git
scripts/fedora_armhfp/: cmakebuild.sh
scripts/raspios_buster/: cmakebuild.sh
templates/android/webview/: .gitignore
templates/npm/svelte/: svelte.config.js
templates/uwp/: App.winmd
web/: App.svelte  Search.svelte  SearchResultItem.svelte  app.html  store.ts  svelte.config.ini
web/static/: manifest.json
